<resources>
    <string name="app_name">Kartu Kuning Maluku</string>
    <string name="dengan_akun_kartu_kuning_anda">dengan akun Kartu Kuning Anda. </string>
    <string name="pelajari_lebih_lanjut">Pelajari lebih lanjut</string>
    <string name="nomor_ktp_atau_username">Nomor KTP atau Username</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="buat_akun">Buat Akun</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="masuk">Masuk</string>
    <string name="lupa_nomor_ktp_username">Lupa Nomor KTP/Username?</string>
    <string name="home">Home</string>
    <string name="akun">Akun</string>
    <string name="layanan">Layanan</string>
    <string name="berita">Berita/Pengumuman</string>
    <string name="lowongan_kerja">Lowongan Kerja</string>
    <string name="peta_lokasi">Peta Lokasi</string>
    <string name="keluar">Keluar</string>
    <string name="informasi_akun">Informasi Akun</string>
    <string name="descriptionimage">descriptionImage</string>
    <string name="kategori">Kategori</string>
    <string name="detail_lowongan">Detail Lowongan</string>
    <string name="detail_berita">Detail Berita</string>
    <string name="download">Download</string>
    <string name="detail_layanan">Detail Layanan</string>
    <string name="lowker">Lowker</string>

    <string-array name="entries_kategori">
        <item>Berita</item>
        <item>Pengumuman</item>
    </string-array>

    <string-array name="entries_halaman">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>50</item>
    </string-array>
</resources>
